--- a/pom.xml
+++ b/pom.xml
@@ -33,15 +33,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.micrometer</groupId>
-            <!-- provides /prometheus endpoint -->
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>${micrometer.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.micrometer</groupId>
-            <!--  for spring boot 1.5.x -->
+            <!--  for spring-boot 1.5.x -->
             <artifactId>micrometer-spring-legacy</artifactId>
             <version>${micrometer.version}</version>
         </dependency>
